<resources>
    <string name="app_name">Psy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_minutes_seconds_formatter" translatable="false">%02d:%02d</string>
    <string name="child">Ребенок</string>
    <string name="adult">Взрослый</string>
    <string name="parent">Родитель</string>
    <string name="pro_better">Больше возможностей с PRO версией</string>
    <string name="diary_emo">Дневник эмоций</string>
    <string name="day_star">Оценка дня</string>
    <string name="here_empty">Здесь пока пусто</string>
    <string name="here_empty_ex">
        Здесь пока пусто! \n
        Обязательно ознакомься с упражнением в инструкции!</string>
    <string name="profile">Профиль</string>
    <string name="go_tests">Тест Трансактный анализ</string>
    <string name="your_name">Ваше имя</string>
    <string name="pro">PRO версия</string>
    <string name="on_boarding_one">Не получается понять свои эмоции? Часто испытываешь перепады настроения? Хочешь наконец познать себя или избавиться от травматичных опытов?</string>
    <string name="on_boarding_two">В нашем приложении есть самотерапия для обретения гармонии, через разделение и понимание твоих Эго состояний.</string>
    <string name="on_boarding_three">Упражнения для каждого Эго сотояния, прохождение теста для контроля прогрессов,  Дневник эмоций  - все это в Psy! </string>
    <string name="on_boarding_for">Ну же ! Начнем твой путь к гармонии, счастью и любви к себе!</string>
    <string name="next">Далее</string>
    <string name="table_emotions">Таблица эмоций</string>
    <string name="self_ex">Самооценка</string>
    <string name="fail_diary_ex">Дневник НЕуспеха</string>
    <string name="do_love_self_ex">Действия любви к себе</string>
    <string name="my_emergency_ex">Моя скорая помощь</string>
    <string name="poll_day_ex">Опрос дня</string>
    <string name="free_writing_ex">Фрирайтинг</string>
    <string name="ideas_diary_ex">Дневник идей</string>
    <string name="album_ex">Альбом ярких моментов</string>
    <string name="wish_diary_ex">Дневник желаний</string>
    <string name="thanks_diary">Дневник благодарностей</string>
    <string name="success_diary_ex">Дневник успеха</string>
    <string name="work_with_belief_ex">Работа с убеждениями</string>
    <string name="positive_belief_ex">Позитивные утверждения</string>
    <string name="life_rules_ex">Правила жизни</string>
    <string name="perfect_life_ex">Идеальная жизнь</string>
    <string name="for_user">Памятка пользователя</string>
    <string name="theme_ideas">Тема идей</string>
    <string name="theme_facts">Тема списка фактов обо мне</string>
    <string name="ex_idea_hint">Например: Идеи для саморазвития</string>
    <string name="new_idea">Новая идея...</string>
    <string name="ex_self_hint">Например: Я в отношениях или Я в детстве</string>
    <string name="fact_about_me">Факт обо мне...</string>
    <string name="sphere_life">Сфера жизни</string>
    <string name="new_rule">Новое правило</string>
    <string name="ex_rules_hint">Например : Отношения</string>
    <string name="new_belief">Новое убеждение / аффирмация...</string>
    <string name="go_instructions_ex">Перейти к инструкции</string>
    <string name="gratitude_question_one">За что я благодарю себя сегодня?</string>
    <string name="gratitude_question_two">За что я благодарю сегодняшний день?</string>
    <string name="gratitude_question_three">Кому я хочу сказать спасибо и за что?</string>
    <string name="love_self_question_one">Кого я люблю?</string>
    <string name="love_self_question_two">Как я проявляю свою любовь?</string>
    <string name="love_self_question_three">Переформулировать действия по отношению к себе</string>
    <string name="my_ambulance_question_one">Ситуация</string>
    <string name="my_ambulance_question_two">Инструмент</string>
    <string name="my_ambulance_question_three">Помощник</string>
    <string name="success_diary_question_one">Что у меня получилось?</string>
    <string name="success_diary_question_two">Когда?</string>
    <string name="success_diary_question_three">Что было сделано важного?</string>
    <string name="fail_diary_question_1">Что у меня не получилось?</string>
    <string name="fail_diary_question_2">Когда?</string>
    <string name="fail_diary_question_3">В чем моя ошибка?</string>
    <string name="fail_diary_question_4">Что можно было сделать иначе?</string>
    <string name="add_time">Выставьте время выполнения в минутах</string>
    <string name="ex_free_writing_qwestion_one">"Мой запрос "</string>
    <string name="begin_ex">Начать упражнение</string>
    <string name="update_completed">Изменения сохранены!</string>
    <string name="delete_ex">Удалить запись</string>
    <string name="info">Инструкция</string>
    <string name="archive">Архив</string>
    <string name="active">Активные</string>
    <string name="add_date">Дата исполнения</string>
    <string name="done">Исполненные</string>
    <string name="ex_wish_field_one">Moe желание</string>
    <string name="ex_wish_hint">Шаги к исполнению...</string>
    <string name="add_photo">Добавить фото</string>
    <string name="date_event">Дата события</string>
    <string name="event">Событие</string>
    <string name="ex_album_title_two">Чем важно для меня это событие?</string>
    <string name="ex_belief_one">Мое убеждение</string>
    <string name="ex_belief_two">Альтернативный вариант</string>
    <string name="ex_belief_item_hint">Опровергающие примеры из жизни...</string>
    <string name="question_photo_load">Откуда вы хотите загрузить изображение?</string>
    <string name="gallery">Галлерея</string>
    <string name="camera">Камера</string>
    <string name="adding_date">Добавление даты</string>
    <string name="save">Сохранить</string>
    <string name="emo_diary_field_one">Ситуация</string>
    <string name="emo_diary_field_two">Какие эмоции я испытываю ?</string>
    <string name="emo_diary_field_three">Ощущения в теле</string>
    <string name="emo_diary_field_for">Мои действия в этой ситуации</string>
    <string name="emo_diary_field_fife">Что я хочу сделать на самом деле?</string>
    <string name="password">Пароль на вход</string>
    <string name="mark">Поставьте нам оценку</string>
    <string name="project_psy">Психолог проекта</string>
    <string name="mail">Связь с разработчиком</string>
    <string name="statistic">Статистика моих эмоций</string>
    <string name="mail_to">Техническая поддержка Psy</string>
    <string name="test_begin">Начать тест</string>
    <string name="save_progress_in_profile">Сохранить результат в прогресс профиля</string>
    <string name="free_writing_field_three">Мой свободный поток мыслей</string>
    <string name="empty">Введите свой запрос</string>
    <string name="about_ex">О упражнении</string>
    <string name="rules_ex">Правила и советы</string>
    <string name="interval_ex">Как часто делать</string>
    <string name="result_ex">Результат</string>
    <string name="ex_info_gratitude_one">Благодарность является универсальным языком счастья. Именно поэтому для ощущения счастья необходимо концентрироваться на позитивных моментах того, что происходит. Дневник благодарностей позволяет тренировать позитивное мышление, видеть бонусы в своей жизни, чувствовать себя счастливее.</string>
    <string name="ex_info_gratitude_two">Периодически перечитывай свой список, замечая, как растут твои благодарности в количестве и качестве.</string>
    <string name="ex_info_gratitude_three">"Выбери регулярность, с которой комфортно начинать и старайся ей следовать. Записывай по несколько благодарностей в день: начини с 1,2 и постепенно увеличивая до 5-10 предложений за день. Каждый раз повторяй слово «благодарю» и записывай свою благодарность конкретно."</string>
    <string name="ex_info_gratitude_for">Отмечая положительные моменты в жизни, ты станешь замечать, что их достаточно много. И помни, на чем мы сфокусированы, то и увеличивается</string>
    <string name="ex_info_wish_one">"Дневник желаний регулярная техника общения со своим внутренним ребёнком. У детей очень много желаний, они хотят всего и сразу. Именно от этого дети вечно кипят энергией и получают желаемое. Вспомни много примеров из своей жизни – когда реализация задуманного давала толчок к действиям, энергию, мотивацию и радость. Работа со своими желаниями – это работа со своей энергией и новыми горизонтами. "</string>
    <string name="ex_info_wish_three">"Важно пересматривать свои желания: переписывать то, что стало неактуальным и вычеркивать то, что уже получилось. Обязательно хвали себя и благодари за каждый маленький шаг. Каждый день спрашивай, что я хочу еще? И записывай каждый ответ. Формулируй правильно: В настоящем времени, будто ты уже обладаешь:  я езжу на своем красном мини купере С мотивацией «к», к чему я хочу прийти: здоровое и гибкое тело, а не похудела на 5 кг В утвердительной форме и совершенной форме глагола – что сделала? я получила корочки доктора наук по психологии Без отрицания: частиц «не», слов «никогда», «всегда», итд создала счастливую семью, с надежным мужчиной, и взаимопониманием В рамках своей ответственности, про себя и о себе: я стала мамой отличника, а не мой сын стал отличником Желательно в каких-либо сроках: я съездила в Париж летом 2022 года "</string>
    <string name="ex_info_wish_two">В каждой дневниковой технике максимальный результат получается при регулярности. Выбери свою регулярность: помни, что раз в день или раз в год — это тоже регулярность. Рекомендуемая частота   раз в квартал, 3 месяца. Минимальная раз в месяц, максимальная раз в год.</string>
    <string name="ex_info_wish_for">"Регулярная практика написания и исполнения желаний дает силы и энергию, желание жить свою жизнь, умение себя слышать и удовлетворение тем, что происходит в твоей жизни. Это ключ к тому, что действительно хочешь ты. Дневник желаний помогает услышать свои желания и цели. "</string>
    <string name="ex_info_free_writing_one">"«Фрирайтинг (англ. free writing) или свободное письмо — техника и методика письма, помогающая найти неординарные решения и идеи, сходная с методом мозгового штурма. Это механическое записывание всех возникающих в голове мыслей в течение определенного времени. Фрирайтинг отлично избавляет от «ментальной жвачки», когда мозг зациклен на какой-то важной или тревожной мысли - мы начинаем бег по кругу. "</string>
    <string name="ex_info_free_writing_two">По необходимости - в случае если тебе нужно разгрузить мозг, придумать креативное решение, рассмотреть проблему с разных сторон, в моменты тревожности</string>
    <string name="cancel">Отмена</string>
    <string name="edit_photo">Редактировать фото</string>
    <string name="pro_seven">Мотивация к регулярности выполнения</string>
    <string name="pro_six">Без рекламы</string>
    <string name="pro_fife">Виджеты для твоих позитивных утверждений и афирмаций</string>
    <string name="pro_for">Пароль на вход в приложение</string>
    <string name="pro_three">Неограниченное количество будильников</string>
    <string name="pro_two">Сохранять прогрессы с результатов теста</string>
    <string name="pro_one">"
    Доступ ко всем упражнениям
    Ребенок :
    - Фрирайтинг
    - Дневник идей
    - Медитации
    Взрослый :
    - Действия любви к себе
    - Моя скорая помощь
    Родитель :
    - Позитивные утверждения
    - Правила жизни
    - Идеальная жизнь
    "</string>
    <string name="is_active_password">Активировать пароль</string>
    <string name="new_password">Новый пароль:</string>
    <string name="show_password">Показать текущий пароль</string>
    <string name="info_about_progress">Для того что бы видеть прогрессы своих эго состояний : Ребенок, Родитель и Взрослый, пройди тест Трансактный анализ и сохрани результаты</string>
    <string name="inf_premium">Для доступа к этим функциям небходимо подключить премиум</string>
</resources>