<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_dark_violet">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            style="@style/ButtonToolBar"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/save"
            style="@style/ButtonToolBar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_menu_24"
            android:tint="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/main_dark_violet"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/name_user"
            style="@style/TextTitleQuestions"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/your_name"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_line_big_white">

            <TextView
                android:id="@+id/premium"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_crown"
                android:drawablePadding="16dp"
                android:gravity="center|start"
                android:text="@string/pro_better"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/diary_emotions"
        style="@style/MenuItemProfile"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_smile_wink"
        android:text="@string/diary_emo" />

    <TextView
        android:id="@+id/statistic"
        style="@style/MenuItemProfile"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_stats"
        android:text="@string/statistic" />

    <TextView
        android:id="@+id/pin_code"
        style="@style/MenuItemProfile"
        android:drawableStart="@drawable/ic_lock"
        android:text="@string/password" />

<!--        <TextView-->
<!--            android:id="@+id/premium"-->
<!--            style="@style/MenuItemProfile"-->
<!--            android:drawableStart="@drawable/ic_crown"-->
<!--            android:text="@string/pro" />-->

    <TextView
        android:id="@+id/info_user"
        style="@style/MenuItemProfile"
        android:drawableStart="@drawable/ic_star"
        android:text="@string/for_user" />

    <TextView
        android:id="@+id/mail"
        style="@style/MenuItemProfile"
        android:drawableStart="@drawable/ic_mail"
        android:text="@string/mail" />

    <TextView
        android:id="@+id/psy_project"
        style="@style/MenuItemProfile"
        android:drawableStart="@drawable/ic_hand_holding_heart"
        android:text="@string/project_psy" />

    <TextView
        android:id="@+id/mark"
        style="@style/MenuItemProfile"
        android:drawableStart="@drawable/ic_heart"
        android:text="@string/mark" />

    <TextView
        style="@style/MenuItemProfile"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:text="by Lev Dev Yan, version 1.0"
        android:textSize="12sp" />

</LinearLayout>