<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment_white"
    android:orientation="vertical"
    tools:context=".ui.profile.pincode.PinCodeFragment">


    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            style="@style/ButtonToolBar"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/title_toolbar"
            style="@style/TextToolBar"
            android:text="@string/password" />

    </RelativeLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/is_active_password" />

    <TextView
        android:id="@+id/show_password"
        style="@style/TextNormal"
        android:layout_marginTop="8dp"
        android:text="@string/show_password" />

    <TextView
        style="@style/TextNormal"
        android:gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/new_password" />

    <io.bitfactory.pincodelayout.PinCodeLayout
        android:id="@+id/pinCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:animationDuration="1000"
        app:hidePin="false"
        app:inputBackground="@drawable/background_transparent"
        app:pinLength="4"
        app:unfilledPinIcon="@drawable/ic_heart"
        app:filledPinIcon="@drawable/ic_heart"
        app:pinTextColor="@color/black"
        app:pinType="digits"
      />

</LinearLayout>