<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_fragment_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/filter_event_top_rl"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <ImageView
            android:id="@+id/close"
            style="@style/ButtonToolBar"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_close_24" />
    </RelativeLayout>

    <TextView
        android:id="@+id/info_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:gravity="center|start"
        android:text="@string/info_about_progress"
        android:textColor="@color/gray_dark"
        app:drawableStartCompat="@drawable/pic_balloon_outline" />


    <TextView
        android:id="@+id/info_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center|start"
        android:text="@string/inf_premium"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="@color/gray_dark"
        app:drawableStartCompat="@drawable/pic_motivation_outline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_positive"
        style="@style/ButtonBigMiddleViolet"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="26dp"
        android:text="@string/for_user" />

</LinearLayout>