<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment_white"
    tools:context=".ui.main.diary_emotions.edit.EditDiaryEmoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_ll"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                style="@style/ButtonToolBar"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title_toolbar"
                style="@style/TextToolBar"
                android:text="@string/diary_emo" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/delete"
                style="@style/ButtonToolBar"
                android:layout_toStartOf="@+id/save"
                android:src="@drawable/ic_delete" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/save"
                style="@style/ButtonToolBar"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_done_24" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/ButtonEditDateTime"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                android:layout_height="40dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/date"
                    style="@style/ButtonEditDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingHorizontal="16dp"
                    android:textAllCaps="false"
                    tools:text="Пн, 25 января" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ButtonEditDateTime"
                android:layout_margin="8dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/time"
                    style="@style/ButtonEditDateTime"
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    tools:text="19:00" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ru.harlion.psy.ui.exercise.base.view_components.TitleEditTextView
            android:id="@+id/question_one"
            android:layout_marginTop="8dp"
            style="@style/ComponentTitleEditText"
            android:title="@string/emo_diary_field_one" />

        <androidx.cardview.widget.CardView
            style="@style/ButtonEditWithDrawable"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/btn_emotions"
                style="@style/ButtonEditWithDrawable"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:text="@string/emo_diary_field_two" />
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_emotions"
            style="@style/RecyclerView"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="4dp" />

        <ru.harlion.psy.ui.exercise.base.view_components.TitleEditTextView
            android:id="@+id/question_two"
            style="@style/ComponentTitleEditText"
            android:title="@string/emo_diary_field_three" />

        <ru.harlion.psy.ui.exercise.base.view_components.TitleEditTextView
            android:id="@+id/question_three"
            style="@style/ComponentTitleEditText"
            android:title="@string/emo_diary_field_for" />

        <ru.harlion.psy.ui.exercise.base.view_components.TitleEditTextView
            android:id="@+id/question_for"
            style="@style/ComponentTitleEditText"
            android:title="@string/emo_diary_field_fife" />

    </LinearLayout>
</ScrollView>