<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment_white"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/photo_button"
        style="@style/ButtonBigLineViolet"
        android:drawableStart="@drawable/ic_picture"
        android:drawablePadding="16dp"
        android:layout_marginTop="20dp"
        android:textStyle="normal"
        android:visibility="gone"
        android:gravity="start|center"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:text="@string/edit_photo"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/title"
        style="@style/TextTitleQuestions"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:gravity="start|top"
        android:background="@drawable/bg_line_big_gray"
        android:lines="2"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_button"
            style="@style/ButtonBigLineViolet"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positive_button"
            style="@style/ButtonBigMiddleViolet"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>