<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.exercise.ex_list.ExListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_ll"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                style="@style/ButtonToolBar"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title_toolbar"
                style="@style/TextToolBar"
                tools:text="@string/ideas_diary_ex" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/save"
                style="@style/ButtonToolBar"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_info_24" />
        </RelativeLayout>

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/tab_tasks"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:tabGravity="fill"-->
<!--            android:background="@color/main_light_violet"-->
<!--            app:tabIconTint="@color/main_dark_violet"-->
<!--            app:tabIconTintMode="src_in"-->
<!--            app:tabIndicator="@color/black"-->
<!--            app:tabIndicatorColor="@color/main_dark_violet"-->
<!--            app:tabIndicatorFullWidth="true"-->
<!--            app:tabIndicatorHeight="0dp"-->
<!--            app:tabInlineLabel="true"-->
<!--            app:tabMode="fixed"-->
<!--            android:layout_marginTop="-0dp"-->
<!--            app:tabRippleColor="@null"-->
<!--            app:tabSelectedTextColor="@color/main_dark_violet"-->
<!--            app:tabTextAppearance="@style/tabText" />-->

<!--        <androidx.viewpager2.widget.ViewPager2-->
<!--            android:id="@+id/tasks_view_pager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->

        <LinearLayout
            android:id="@+id/empty_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/pick_empty_ex" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/here_empty_ex" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonBigMiddleViolet"
                android:id="@+id/btn_big_instruction"
                android:text="@string/go_instructions_ex" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_ex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/main_dark_violet"
        app:fabSize="normal"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:tint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>